# Rubix-Cuber

./: .gitignore  README.md
backend/: CMakeLists.txt  cube.h
backend/src/: cube.cpp
front/: main.css  main.html  main.js
